--- a/GraduateWork_11_Ludchak/GraduateWork_11_Ludchak.csproj
+++ b/GraduateWork_11_Ludchak/GraduateWork_11_Ludchak.csproj
@@ -213,6 +213,12 @@
     <Compile Include="FormCRUD&amp;Log\FormEmployeeCRUD.Designer.cs">
       <DependentUpon>FormEmployeeCRUD.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormCRUD&amp;Log\FormVPCRUD.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCRUD&amp;Log\FormVPCRUD.Designer.cs">
+      <DependentUpon>FormVPCRUD.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -226,6 +232,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormCRUD&amp;Log\FormEmployeeCRUD.resx">
       <DependentUpon>FormEmployeeCRUD.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormCRUD&amp;Log\FormVPCRUD.resx">
+      <DependentUpon>FormVPCRUD.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
