--- a/GraduateWork_11_Ludchak/GraduateWork_11_Ludchak.csproj
+++ b/GraduateWork_11_Ludchak/GraduateWork_11_Ludchak.csproj
@@ -207,6 +207,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\VacationDBContext.cs" />
+    <Compile Include="FormCRUD&amp;Log\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCRUD&amp;Log\Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormCRUD&amp;Log\FormEmployeeCRUD.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -231,11 +237,15 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\EmployeeDocumentGenerator.cs" />
     <Compile Include="Models\VacationPlan.cs" />
     <Compile Include="Models\LogUser.cs" />
     <Compile Include="Models\Employee.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormCRUD&amp;Log\Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormCRUD&amp;Log\FormEmployeeCRUD.resx">
       <DependentUpon>FormEmployeeCRUD.cs</DependentUpon>
     </EmbeddedResource>
@@ -285,7 +295,35 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <COMReference Include="Microsoft.Office.Core">
+      <Guid>{2DF8D04C-5BFA-101B-BDE5-00AA0044DE52}</Guid>
+      <VersionMajor>2</VersionMajor>
+      <VersionMinor>8</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="Microsoft.Office.Interop.Word">
+      <Guid>{00020905-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>8</VersionMajor>
+      <VersionMinor>7</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="VBIDE">
+      <Guid>{0002E157-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>5</VersionMajor>
+      <VersionMinor>3</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Img\1237946.png" />
     <Content Include="Img\2546743.png" />
